Fix border not showing after load order change

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -726,7 +726,7 @@ img {
   max-height: none;
 }
 
-.button.is-accent {
+.button.is-accent:not(.is-outlined) {
     border-color: transparent;
 }
 
